# Linux_C--

./: .gitignore  CMakeLists.txt  main.cpp
DynamicLib/: CMakeLists.txt
DynamicLib/include/DynamicLib/: DynamicLib.h
DynamicLib/src/: DynamicLib.cpp
StaticLib/: CMakeLists.txt
StaticLib/include/StaticLib/: StaticLib.h
StaticLib/src/: StaticLib.cpp
